--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -21,6 +21,7 @@
 \usepackage{enumitem}
 \usepackage{nccmath}
 \usetikzlibrary {arrows.meta,bending,positioning}
+\usepackage{bussproofs}
 
 \newcommand{\mprime}{\ensuremath{^\prime}}
 
@@ -449,14 +450,16 @@ Logicians might say that we have presented a system of natural deduction
 for the positive intuitionistic propositional calculus, but with an additional
 twist: the equations of a cartesian closed category impose an {\em equality
 relation} between proofs (or proof trees). For example:
-\[
-\begin{aligned}
-\inferrule*
-	{\inferrule*{C \xto{f} A \quad C \xto{g} B}
-		{C \xto{\la f,g \ra} A \sland B} \\ A \sland B \xto{\pi} A}
-	{C \xto{\pi\la f,g \ra} A }
-\end{aligned} \quad \vbox to .5em{\hbox{\textrm{equals } $C \xto{f} A$}}
-\]
+\def\extraVskip{3pt}
+\begin{prooftree}
+\AxiomC{$C \xto{f} A$}
+\AxiomC{$C \xto{g} B$}
+\BinaryInfC{$C \xto{\la f,g \ra} A \sland B$}
+\AxiomC{$A \sland B \xto{\pi} A$}
+\RightLabel{\quad \vbox to 2em{\hbox{\textrm{equals } $C \xto{f} A$}}}
+\BinaryInfC{$C \xto{\pi\la f,g \ra} A$}
+\end{prooftree}
+
 This notion of ``equivalence of proofs'' is essentially the same as that
 introduced by logicians (Prawitz, 1971), as pointed out by Mann (1975).
 
