--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -675,20 +675,18 @@ simply a form of the deduction theorem in logic,
 with something extra added at the end: to every proof
 $\pf(x): B \to C$ under the assumption $x: D \to A$ there is a unique
 proof $f: (D \impl A) \sland B \to C$ such that the proof
-\[
-% very annoying to get this tree right now that the formatting
-% also works. easier to do it with placeholders first then fill in the
-% actual things.
-\inferrule
-	{\inferrule*
-    	{\inferrule*[leftskip=1.5em] 
-    		{B \sland D \to D \\ D \sxto{x} A}
-    		{B \sland D \to A}}
-		{\inferrule {B \to (D \impl A) \\ B \to B} {B \to (D \impl A) \sland B}} \\ 
-		(D \impl A) \sland B \sxto{f} C}
-	{B \to C}
-\]
-
+\def\extraVskip{4pt}
+\def\defaultHypSeparation{\hskip .1in}
+\begin{prooftree}
+\AxiomC{$B \sland D \to D$}
+\AxiomC{$D \sxto{x} A$}
+\BinaryInfC{$B \sland D \to A$}
+\UnaryInfC{$B \to (D \impl A)$}
+\AxiomC{$B \to B$}
+\BinaryInfC{$B \to (D \impl A) \sland B$}
+\AxiomC{$(D \impl A) \sland B \sxto{f} C$}
+\BinaryInfC{$B \to C$}
+\end{prooftree}
 equals $B \sxto{\pf(x)} C$.
 
 \begin{cor}
