--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,26 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-07-16 07:22:45 -0400 
+%% Created for Pete Su at 2025-08-10 07:52:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Prawitz1971,
+	author = {Prawitz, Dag},
+	booktitle = {Proceedings of the Second Scandinavian Logic Symposium},
+	date-added = {2025-08-10 07:51:39 -0400},
+	date-modified = {2025-08-10 07:51:59 -0400},
+	doi = {10.1016/s0049-237x(08)70849-8},
+	issn = {0049-237X},
+	pages = {235--307},
+	publisher = {Elsevier},
+	title = {{Ideas and Results in Proof Theory}},
+	url = {http://dx.doi.org/10.1016/s0049-237x(08)70849-8},
+	year = {1971},
+	bdsk-url-1 = {http://dx.doi.org/10.1016/s0049-237x(08)70849-8}}
 
 @book{Aitchison2012a,
 	author = {Aitchison, Ian J R and Hey, Anthony J.G.},
