add note about "inderminate arrows"

--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -650,7 +650,9 @@ Objects of $\C[x]$ are the same as objects of $\C$. Arrows of $\C[x]$ are
 generated from those in $\C$ and the new basic arrow $x: D \to A$ using the arrow
 forming operations: composition, $\la -,- \ra$, $(-)^*$. Equality $\eqdX$ in $\C[x]$ 
 is the smallest congruence relation on hom-sets of $\C[x]$ which respects equality $\deqd$
-$\C$ and assures that $\C[x]$ is a cartesian closed category.
+$\C$ and assures that $\C[x]$ is a cartesian closed category.%
+\footnote{Editor's note: Lambek explains this process in more detail in his 1974 paper about the
+result below [L2].}
 
 The category $\C[x]$ satisfies the appropriate universal property in $\cart$.
 For the committed categorist, $\C[x]$ may also be constructed directly as the
