--- a/lambek-1984/lambek-1984-cmr.tex
+++ b/lambek-1984/lambek-1984-cmr.tex
@@ -1,7 +1,7 @@
 %!TEX TS-program = pdflatex
 
 \documentclass[12pt]{article}
-%\usepackage{mlmodern}
+\usepackage{mlmodern}
 \usepackage[T1]{fontenc}
 
 \usepackage[leqno]{amsmath}
