--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -651,15 +651,15 @@ generated from those in $\C$ and the new basic arrow $x: D \to A$ using the arro
 forming operations: composition, $\la -,- \ra$, $(-)^*$. Equality $\eqdX$ in $\C[x]$ 
 is the smallest congruence relation on hom-sets of $\C[x]$ which respects equality $\deqd$
 $\C$ and assures that $\C[x]$ is a cartesian closed category.%
-\footnote{Editor's note: Lambek explains this process in more detail in his 1974 paper about the
-result below [L2].}
+\footnote{Editor's note: Lambek explains this process in more detail in his 1974 paper about
+proposition \ref{fun} [L2].}
 
 The category $\C[x]$ satisfies the appropriate universal property in $\cart$.
 For the committed categorist, $\C[x]$ may also be constructed directly as the
 Kleisli category of a certain co-monad (co-triple) on $\C$. For our purposes, the
 most interesting result concerns the normal forms of polynomials in $\C[x]$.
 
-\begin{prop}
+\begin{prop}\label{fun}
 ({\em functional completeness} of cartesian closed categories).
 For every polynomial $\pf(x): B \to C$
 in $\C[x]$ in an indeterminate arrow
