--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -415,7 +415,7 @@ for all $f: C\times A \to B$, and $g: C \to \fexpBA$.
 
 \end{defn}
 \noindent
-It is understood that $\deqd$ is a congruence relation%
+It is understood that $\deqd$ is a congruence relation
 on $\Hom$-sets satisfying the
 above. There may be other objects, arrows and equations than follow from the
 above.
