--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -519,7 +519,7 @@ freely in $a$ and $a'$.
 \item We have the substitution rules:
 \[
 \inferrule{c \eqx c'}{\pf(c) \eqx \pf(c)}, \quad 
-\inferrule{a \eqx a', \quad b \eqx b'}{\psi(a,b), \eqx \psi(a',b')}
+\inferrule{a \eqx a' \quad b \eqx b'}{\psi(a,b) \eqx \psi(a',b')}
 \]
 if $\pf(z) \equiv \pi(z)$ or $\pi'(z)$ and $\psi(x,y) \equiv \la x,y \ra$ or $x \app y$ and also
 \[
