--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -344,7 +344,7 @@ $$
 also a term $R^{\b(n)}$ for each numeral $n$.
 \end{enumerate}
 
-\subsection{\it 9. Constructions and derivations in \texorpdfstring{$\HIMP$}{H(⊃, ∧, ∀)}}
+\subsection{\it 9. Constructions and derivations in \texorpdfstring{$\HIMP$}{H(⊃, ∨, ∀)}}
 Define constructions as in section 2. As in the case of $\PI$ —-- see section 3 —-- the axioms of $\HIMP$ correspond to the existence of
 certain terms, and the rules of inference correspond to rules of term formation. In particular $\forall x \a(x) \imp \a(t)$ has the
 construction $Y^{\forall x  \a(x) \imp \a(t)}$. If $F$ is a construction of $\gimpa$, then $\l x. \, F$ is a construction of $\G \imp \forall x \, \a$. If $G(X^{\a(t)})$ is a construction of $\G,\a(y) \imp \b$, then $G(Y^{\forall x \, \a (x)} t)$ is a construction of 
@@ -354,7 +354,7 @@ $\G, \, \forall x \a (x) \imp \b$. Thus, we obtain:
 Given any derivation of $\gimpb$ in $\HIMP$ we can find a construction of $\gimpb$ and conversely.
 \end{theorem}
 
-\subsection{\it 10. Interpretation of terms of \texorpdfstring{$\HIMP$}{H(⊃, ∧, ∀)}}
+\subsection{\it 10. Interpretation of terms of \texorpdfstring{$\HIMP$}{H(⊃, ∨, ∀)}}
 
 We extend the discussion of section 4 as follows.
 
