--- a/howard-1980/howard-ch.tex
+++ b/howard-1980/howard-ch.tex
@@ -245,7 +245,7 @@ Cut {\it elimination} can be taken to mean: the transformation of a proof of $\g
 \def\fimpa{f \limp a}
 \def\contr{\mathop{\sf contr}}
 
-\subsection{\it 6. Addition of $\lnot$, $\land$ and $\lor$ to $\PI$}
+\subsection{\it 6. Addition of \texorpdfstring{$\lnot$, $\land$ and $\lor$ to $\PI$}{¬, ∧, and ∨ to P(⊃)}}
 
 Corresponding to each of these connectives we add certain closed prime terms to our supply of terms.
 
@@ -343,7 +343,7 @@ $$
 also a term $R^{\b(n)}$ for each numeral $n$.
 \end{enumerate}
 
-\subsection{\it 9. Constructions and derivations in $\HIMP$}
+\subsection{\it 9. Constructions and derivations in \texorpdfstring{$\HIMP$}{H(⊃, ∨, ∀)}}
 
 Define constructions as in section 2. As in the case of $\PI$ —-- see section 3 —-- the axioms of $\HIMP$ correspond to the existence of
 certain terms, and the rules of inference correspond to rules of term formation. In particular $\forall x \a(x) \imp \a(t)$ has the
@@ -354,7 +354,7 @@ $\G, \, \forall x \a (x) \imp \b$. Thus, we obtain:
 Given any derivation of $\gimpb$ in $\HIMP$ we can find a construction of $\gimpb$ and conversely.
 \end{theorem}
 
-\subsection{\it 10. Interpretation of terms of $\HIMP$}
+\subsection{\it 10. Interpretation of terms of \texorpdfstring{$\HIMP$}{H(⊃, ∨, ∀)}}
 
 We extend the discussion of section 4 as follows.
 
