--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -180,7 +180,7 @@ pdfencoding=auto, psdextra
 \def\Assoc{\text{\it Assoc}}
 \def\fst{\mathop{\text{\it fst}}}
 \def\snd{\mathop{\text{\it snd}}}
-\def\pairop#1#2{\la  #1, #2 \ra}
+\def\pair#1#2{\la  #1, #2 \ra}
 \def\emptypair{\la  \_\,, \_ \ra}
 
 \newcommand{\iso}{\cong}                % Isomorphism
@@ -438,14 +438,61 @@ limit constructions such as pullbacks force the dependence of objects on arrows.
 Skolemization cannot be eﬀected separately on the object and the arrow variables, and we
 shall have to place ourselves in a more complicated type theory with dependent types.
 
-Pair $\emptypair$ and $\pairop{a}{b}$
+We shall apply the recipe above to the definition of product in a category. We recall that a category
+possesses a product if for all objects $A$,$B$ there exists an object $C$ and there exist arrows
+$\fst$, $\snd$ such that for every object $D$ and all arrows $f$, $g$ 
+there exists a unique arrow $h$ such that the
+following diagram commutes:
 
+\tikzcdset{arrow style=tikz, diagrams={>=latex}}
+\begin{center}
+\begin{tikzcd}[column sep=huge, row sep=6.5em]
+A \arrow[thick, r, "\fst"] & C  \arrow[thick, r, "\snd"]& B \\
+ & \arrow[thick, ul, "f" {xshift=2pt}] D \arrow[thick, u, "h" {right}] 
+ \arrow[thick, ur, "g" {below, yshift = -3pt} ] &
+\end{tikzcd}
+\end{center}
 
+We now get the theory $\Prod$ by enriching $\CC$ as follows. The Skolemization of $C$ gives the
+binary functor $\times$, and we write with the infix notation 
+$A \times B$ in place of $C$. So now $\Phi$ = $\{\times\}$.
+Similarly, we add to $\Sigma$ the following operators,
+issued respectively from $\fst$, $\snd$ and $h$:
+\begin{align*}
+\fst &: A \times B \to A\\
+\snd &: A \times B \to B\\
+\emptypair &: D\to A \text{ , } D \to B \,\ent\, D \to A \times B
+\end{align*}
+and we now have the usual diagram:
+\tikzcdset{arrow style=tikz, diagrams={>=latex}}
+\begin{center}
+\begin{tikzcd}[column sep=huge, row sep=6.5em]
+A \arrow[thick, r, "\fst"] & A \times B  \arrow[thick, r, "\snd"]& B \\
+ & \arrow[thick, ul, "f" {xshift=2pt}] D \arrow[thick, u, "\pair{f}{g}" {right,yshift=8pt}] 
+ \arrow[thick, ur, "g" {below, yshift = -3pt} ] &
+\end{tikzcd}
+\end{center}
+The existence of $h$, that is the commutation of the two triangles,
+gives two new equations in $\mathcal R$:
+\begin{align*}
+\pi_1 &: \fst \circ\, \pair{f}{g} = f\\
+\pi_2 &: \snd \circ\, \pair{f}{g} = g
+\end{align*}
+Unicity of $h$ gives one last equation:
+\[
+\text{\it Unipair} : \pair{\,\fst \circ h}{\,\snd \circ h} = h
+\]
+The arrow part of the functor $\times$ may be defined as a derived operator as follows:
+\begin{align*}
+\_ \times \_  &: A\to B , \, C \to D \, \ent \, A\times C \to B \times D\\
+\text{\it Def } \times &: f \times g = \pair{\,\fst \circ f}{g\circ \, \snd}
+\end{align*}
 
-
-
-
-
-
-
-
+\bigskip\noindent
+{\bf Remark}. There is a possible source of confusion in our terminology. We talked about the elements
+of $\Phi$ as functors. Actually these are just function symbols denoting object constructors. 
+Skolemization of a diagram will determine certain such function symbols,
+but there is no guarantee that
+there will be a corresponding functor. For instance,
+for product, we had to define the arrow part
+of $\times$ above, and to verify that indeed it obeys the functorality laws.
