--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -314,7 +314,7 @@ is summarized as follows:
  \hline
 \multicolumn{1}{c|}{Logic} & \multicolumn{1}{c}{Algebra} \\
  \hline
- untyped $\l$-calculus & C-monoids \\
+ untyped $\l$-calculus & $\C$-monoids \\
  typed $\l$-calculus & cartesian closed categories \\
  type theory & toposes \\
  \hline
@@ -825,7 +825,7 @@ interpretation}. In a sense, the present paper may be considered as a
 categorical examination of principles implicit in G\"odel's Dialectica
 interpretation (see also [S]).
 
-\section{Untyped $\l$-calculus and C-monoids}
+\section{Untyped $\l$-calculus and $\C$-monoids}
 
 Suppose we have a cartesian closed category with only two non-isomorphic
 objects $\one$ and $U$, that is to say, every object is isomorphic to $\one$ or $U$,
@@ -842,7 +842,7 @@ elements of $\MC$ reduce drastically: ignoring the terminal object, we simply
 erase all subscripts on the equations of a cartesian closed category.
 
 \begin{defn}
-A {\em $C$-monoid} $\MC$ is a monoid with extra structure
+A {\em ${\C}$-monoid} $\MC$ is a monoid with extra structure
 $(\pi, \pi', \ev, (-)^*, \la -,- \ra)$ where $\pi$, $\pi'$, and $\ev$ are
 elements of $\MC$ (i.e. nullary operations), $(-)^*$ a unary and $\la -,- \ra$ is
 a binary operation satisfying the following identities:
