--- a/Huet-1986/huet-1986-pal.tex
+++ b/Huet-1986/huet-1986-pal.tex
@@ -12,7 +12,7 @@
 \usepackage{amsthm}
 \usepackage{newpx}
 \usepackage[cal=cm,scr=esstix]{mathalpha}
-%\usepackage{eulervm}
+\usepackage{eulervm}
 \def\PA{{PA}}
 \def\PB{{PB}}
 \def\HA{{HA}}
