--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -178,6 +178,10 @@ pdfencoding=auto, psdextra
 \def\Id{\text{\it Id}}
 \def\Idl{\text{\it Idl}}
 \def\Idr{\text{\it Idr}}
+\def\Nil{\text{\it Nil}}
+\def\Uni{\text{\it Uni}}
+\def\Nill{\text{\it Nil}1}
+\def\Unii{\text{\it Uni}1}
 \def\Assoc{\text{\it Assoc}}
 \def\fst{\mathop{\text{\it fst}}}
 \def\snd{\mathop{\text{\it snd}}}
@@ -514,7 +518,7 @@ in order to complete $\R$ to a canonical system [17,9].
 The Knuth-Bendix completion procedure, when applied to theory Prod, generates two additional rewrite rules:
 
 \begin{align*}
-\text{\it IdPair} &: \pair{\fst}{\snd} = \text{\it Id} \\
+\Id &: \pair{\fst}{\snd} = \Id \\
 \text{\it DistrPair} &: \pair{f}{g}\circ h = \pair{f \circ h}{g \circ h}
 \end{align*}
 The resulting system $\R$ is canonical, and can be used to decide the equality
@@ -526,9 +530,38 @@ For instance, we could have obtained product as the right adjoint of the
 diagonal functor. The unit of this adjunction is the 
 {\it duplicator}, which may be defined here as:
 $$
-D = \pair{\text{\it Id}}{\text{\it Id}}
+D = \pair{\Id}{\Id}
 $$
 Note that type-checking imposes that the two identities are the same, so that $D_A: A \to A \times A$.
 As its name suggests, the duplicator duplicates, in the sense that we can
 prove $D \circ f = \pair{f}{f}$.
 The co-unit of the adjunction is the pair of projections $(\fst, \snd)$.
+
+\subsection{Finite products}
+
+We say that a category admits all finite products if it admits products and a terminal object.
+Equationally, this amounts to enrich the theory {\bf Prod} to a theory {\bf Prods} by adding
+a constant $1$ to $\Phi$, a polymorphic constant $\Nil : A \to 1$ to $\Sigma$,
+and a unicity equation $\Unii$ to $\R$:
+$$
+\Unii : h = \Nil.
+$$
+Note that this does not make the equational theory inconsistent: 
+the variable $h$ above is principally typed to $A\to 1$.
+However this equation brings up two problems. The first one is the one mentioned
+in the beginning of these notes, since variable $h$ appears on the left but not on the right of $\Unii$.
+The second problem is that $\Unii$ cannot be considered as a term rewriting rule in the usual sense,
+since it would rewrite $\Nil$ to itself and therefore does not satisfy the finite termination criterion.
+Note that $\Unii$ entails with the other equations two consequences:
+
+\begin{align*}
+\text{\it Zero} &: f \circ \Nil = \Nil\\
+\text{{\it Id}1} &: \Id = \Nil
+\end{align*}
+Again, ${\Id}1$ does not identify every $\Id$ with every $\Nil$,
+but only (restoring explicit types) $\Id_1$
+with $\Nil_1$. Now it may be checked that $\Unii$ is actually a
+consequence of $\text{\it Zero}$
+and ${\Id}1$. The rule $\text{\it Zero}$ is a bona fide rewrite rule, 
+which leaves the special equality Id1 to be dealt with in an ad hoc
+fashion.
