--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -656,7 +656,23 @@ $$
 \section{Lambda-calculus}
 
 Sometimes $\abs$ is called ``Curryfication'', in honor of Curry. In fact there is an important relation
-between combinatory logic and CCC’s, which we shall exhibit on $\lambda$-calculus.
+between combinatory logic and CCC’s, which we shall exhibit on $\l$-calculus.
 
-\subsection{The $\lambda$-terms}
+\subsection{The $\l$-terms}
 
+We assume that the current theory is an extension of {\bf Exp}.
+We define recursively a relation $E \ent M : A$, read ``$M$ is a term of type $A$ in the context $E$'',
+where $A \in \C$ and $E \in \C^*$, as follows:
+\begin{align*}
+\text{\bf Variable} &: \text{If } 1 \leq n \leq |E| \text{ then } E\ent n: E_n\\
+\text{\bf Abstraction} &: \text{If } E \times A \ent M : B \text{ then } E \ent [A]M : A \impl B\\
+\text{\bf Application} &: \text{If } E \ent M: A \impl B \text{ and } E \ent N
+\text{ then } E \ent (M N) : B
+\end{align*}
+Thus a term may be a natural number, or may be of the form $[A]M$ with $A$ an object and $M$
+a term, or may be of the form $(M N)$ with $M, N$ two terms.
+
+We thus obtain $\l$-terms typed with objects of the CCC currently axiomatized. Variables are
+coded as de Bruijn's indexes [2]. i.e. as integers denoting their reference depth (distance in the
+tree to their binder). This representation avoids all the renaming problems associated with actual
+names ($\alpha$ conversion), but we shall use such names whenever we give examples of terms.
