--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -675,4 +675,15 @@ a term, or may be of the form $(M N)$ with $M, N$ two terms.
 We thus obtain $\l$-terms typed with objects of the CCC currently axiomatized. Variables are
 coded as de Bruijn's indexes [2]. i.e. as integers denoting their reference depth (distance in the
 tree to their binder). This representation avoids all the renaming problems associated with actual
-names ($\alpha$ conversion), but we shall use such names whenever we give examples of terms.
+names ($\alpha$ conversion), but we shall use such names whenever we give examples of terms. For
+instance, the term $[A] (1 [B] (1 2))$ shall be presented under a concrete representation such as
+$[x : A] (x [y : B] (y x))$. In Church's original notation, the left bracket was a $\l$ and the right
+bracket a dot, and typing was indicated by superscripting, like: $\l x^A\cdot (x \l y^B \cdot (y x))$.
+
+Note that the relation $E \ent M : A$ is functional, in that $A$ is uniquely determined from $E$ and $M$.
+Thus the definition above may be interpreted as the recursive definition of a function $A = \tau_E(M)$.
+
+\subsection{A Translation From $\l$-terms to CCC Arrows}
+
+We shall now show how to translate $\l$-terms to CCC arrows. More precisely, to every term $M$ such
+that $E \ent M : A$ we associate an arrow $F_E(M) : E \to A$ as follows:
