--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -109,6 +109,7 @@ pdfencoding=auto, psdextra
 \def\evBA{\varepsilon_{B,A}}
 \def\L{\Lambda}
 \def\OM{\Omega}
+\def\nat{\text{\it nat}}
 
 \def\l{\lambda}
 \def\lamC{\l\text{-{\bf{\kern 0.2pt}calc}}}
@@ -271,7 +272,7 @@ pdfencoding=auto, psdextra
 \title{\large Cartesian Closed Categories and Lambda Calculus}
 \author{\normalsize G\'erad Huet%
 \footnote{This is a remake of the paper {\em Cartesian Closed Categories and Lambda Calculus}
-originally published 1986. This version of the paper was typed out in 2025 by Pete Su.} 
+originally published 1986. This version of the paper was typed out in 2025/26 by Pete Su.} 
 \\ \\ \small INRIA}
 
 
@@ -687,3 +688,36 @@ Thus the definition above may be interpreted as the recursive definition of a fu
 
 We shall now show how to translate $\l$-terms to CCC arrows. More precisely, to every term $M$ such
 that $E \ent M : A$ we associate an arrow $F_E(M) : E \to A$ as follows:
+\begin{align*}
+F_E (n) &= \pi_E (n)\\
+F_E ([A]M) &= \abs F_{E \times A}(M)\\
+F_E ((M\, N)) &= \App \circ \la F_E (M) , F_E (N) \ra
+\end{align*}
+It can be easily proved by induction that $F_E(M)$ is a well-typed arrow expression.
+
+\medskip
+\noindent
+{\bf Example}. The closed term $M = [f : \nat \impl \nat ][x : \nat](f\, (f\, x))$ of type $A = (\nat \impl
+\nat) \impl (\nat\impl \nat)$ in the empty context $E = 1$, gets translated to:
+$$
+F_E (M) = \abs \abs (\App\circ \la \snd \circ \fst, \App \circ \la \snd \circ \fst, \snd\ra \ra) : 1 \to A.
+$$
+
+\subsection{The syntactic theory of terms}
+
+The advantage of the name-free terms is that we have no name conflict. The disadvantage is that
+we have to explicate relocation operations for terms containing free variables. For instance, let
+us define for every term $M$ the term $M^{+n}$ obtained in incrementing its free variables by $n$. Let
+$M^{+n} = R^0_{n}(M)$, with:
+
+
+
+
+
+
+
+
+
+
+
+
