--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -158,6 +158,8 @@ pdfencoding=auto, psdextra
 \def\pf{\varphi}
 \def\abs{\mathop{\text{\small[\,]}}}
 \def\App{\mathop{\text{\it App}}}
+\def\sigmaN{\Sigma^n_N}
+\def\comptr{\triangleright}
 
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
@@ -177,7 +179,7 @@ pdfencoding=auto, psdextra
 \def\TC{\fcat{T}}
 \def\FC{\fcat{F}}
 \DeclareMathOperator{\Hom}{{Hom}}
-\def\comp#1#2{#1 \mathbin{;} #2}
+\def\compseq#1#2{#1 \mathbin{;} #2}
 \def\Id{\text{\it Id}}
 \def\Idl{\text{\it Idl}}
 \def\Idr{\text{\it Idr}}
@@ -367,26 +369,26 @@ from the principality assumption.
 \subsection{The initial theory Categ}
 
 We are now ready to start Category Theory. The initial theory $\CC$ has $\Phi = \emptyset$,
-and $\Sigma = \{\Id,\comp{\_}{\_} \}$, given with respective signatures:
+and $\Sigma = \{\Id,\compseq{\_}{\_} \}$, given with respective signatures:
 \begin{align*}
 \Id &: A \to A\\
-\comp{\_}{\_}&: A \to B, B \to C \ent A \to C
+\compseq{\_}{\_}&: A \to B, B \to C \ent A \to C
 \end{align*}
-The notation ``$\comp{\_}{\_}$'' means that we use the infix notation $\comp{f}{g}$
+The notation ``$\compseq{\_}{\_}$'' means that we use the infix notation $\compseq{f}{g}$
 for the composition of arrows $f$ and $g$. We can read ``$\!f$ then $g$'',
 and follow arrow composition along diagrams with semi-colon as
 concatenation of the labels. But since more people are accustomed to the standard set-theoretic
-composition notation, we shall below use $g\circ f$ as an abbreviation for $\comp{f}{g}$.
+composition notation, we shall below use $g\comp f$ as an abbreviation for $\compseq{f}{g}$.
 
 The equations $\R$ of $\CC$ are simply the laws of a monoıd:
 \begin{align*}
-\Assoc &: (f \circ g) \circ h = f \circ (g \circ h)\\
-\Idl &: \Id \circ f = f\\
-\Idr &: f \circ \Id = f
+\Assoc &: (f \comp g) \comp h = f \comp (g \comp h)\\
+\Idl &: \Id \comp f = f\\
+\Idr &: f \comp \Id = f
 \end{align*}
 
 It is to be noted that the identification of the Hom-set symbol $\to$ with the sequent entailment
-arrow is not fortuitious. Actually $\Id$ and $\comp{\_}{\_}$
+arrow is not fortuitious. Actually $\Id$ and $\compseq{\_}{\_}$
 are well-known inference rules of intuitionistic propositional calculus.
 However, the logic is quite poor at this stage: we have no propositional connective
 whatsoever, just the basic mechanism for sequent composition, 
@@ -486,17 +488,17 @@ A \arrow[thick, r, "\fst"] & A \times B  \arrow[thick, r, "\snd"]& B \\
 The existence of $h$, that is the commutation of the two triangles,
 gives two new equations in $\R$:
 \begin{align*}
-\pi_1 &: \fst \circ\, \pair{f}{g} = f\\
-\pi_2 &: \snd \circ\, \pair{f}{g} = g
+\pi_1 &: \fst \comp\, \pair{f}{g} = f\\
+\pi_2 &: \snd \comp\, \pair{f}{g} = g
 \end{align*}
 Unicity of $h$ gives one last equation:
 \[
-\text{\it Unipair} : \pair{\,\fst \circ h}{\,\snd \circ h} = h
+\text{\it Unipair} : \pair{\,\fst \comp h}{\,\snd \comp h} = h
 \]
 The arrow part of the functor $\times$ may be defined as a derived operator as follows:
 \begin{align*}
 \_ \times \_  &: A\to B , \, C \to D \, \ent \, A\times C \to B \times D\\
-\text{\it Def } \times &: f \times g = \pair{\,\fst \circ f}{g\circ \, \snd}
+\text{\it Def } \times &: f \times g = \pair{\,\fst \comp f}{g\comp \, \snd}
 \end{align*}
 
 \bigskip\noindent
@@ -522,7 +524,7 @@ The Knuth-Bendix completion procedure, when applied to theory {\bf Prod}, genera
 
 \begin{align*}
 \Id &: \pair{\fst}{\snd} = \Id \\
-\text{\it DistrPair} &: \pair{f}{g}\circ h = \pair{f \circ h}{g \circ h}
+\text{\it DistrPair} &: \pair{f}{g}\comp h = \pair{f \comp h}{g \comp h}
 \end{align*}
 The resulting system $\R$ is canonical, and can be used to decide the equality
 of arrows in the theory {\bf Prod}. Of course, the equations above do not
@@ -537,7 +539,7 @@ D = \pair{\Id}{\Id}
 $$
 Note that type-checking imposes that the two identities are the same, so that $D_A: A \to A \times A$.
 As its name suggests, the duplicator duplicates, in the sense that we can
-prove $D \circ f = \pair{f}{f}$.
+prove $D \comp f = \pair{f}{f}$.
 The co-unit of the adjunction is the pair of projections $(\fst, \snd)$.
 
 \subsection{Finite products}
@@ -558,7 +560,7 @@ since it would rewrite $\Nil$ to itself and therefore does not satisfy the finit
 Note that $\Unii$ entails with the other equations two consequences:
 
 \begin{align*}
-\text{\it Zero} &: f \circ \Nil = \Nil\\
+\text{\it Zero} &: f \comp \Nil = \Nil\\
 \text{{\it Id}1} &: \Id = \Nil
 \end{align*}
 Again, ${\Id}1$ does not identify every $\Id$ with every $\Nil$,
@@ -598,7 +600,7 @@ $\pi_{E} (n) : E \to E_n$, as:
 \[
 \begin{array}{lcll}
 \pi_{E} (n) & =&  
-\pi_{E'}(n)\circ \fst & \text { if } n > 1 \text{ and } E = E' \times A\\
+\pi_{E'}(n)\comp \fst & \text { if } n > 1 \text{ and } E = E' \times A\\
 && \snd & \text{ if } n= 1
 \end{array}
 \]
@@ -616,8 +618,8 @@ operator $\impl$ to $\Phi$. Next we add two operators to $\Sigma$, the constant 
 \end{align*}
 Finally, we add the following equations to $\R$:
 \begin{align*}
-{\text{\it ExAbs}} & :\, \App \circ (\abs f \times \Id) = f\\
-{\text{\it UniAbs}} &:\, \abs(\App \circ (f \times \Id)) = f
+{\text{\it ExAbs}} & :\, \App \comp (\abs f \times \Id) = f\\
+{\text{\it UniAbs}} &:\, \abs(\App \comp (f \times \Id)) = f
 \end{align*}
 As before, this equational theory may be mechanically generated from the following diagram:
 \begin{center}
@@ -635,14 +637,14 @@ of the deduction theorem.
 Let us give a few equational consequences of the theory {\bf Exp}:
 \begin{align*}
 {\text{\it IdExp}} & : \abs \App = \Id\\
-{\text{\it Red}}_1 & : \App \circ \la \abs f \circ y, x\ra = f\circ\la y, x\ra \\
-{\text{\it Red}} & : \App \circ \la\abs f, x \ra = f\circ\la \Id , x\ra \\
-{\text{\it DistrAbs}} & : \abs f \circ g = \abs(f \circ (g \times \Id ))
+{\text{\it Red}}_1 & : \App \comp \la \abs f \comp y, x\ra = f\comp\la y, x\ra \\
+{\text{\it Red}} & : \App \comp \la\abs f, x \ra = f\comp\la \Id , x\ra \\
+{\text{\it DistrAbs}} & : \abs f \comp g = \abs(f \comp (g \times \Id ))
 \end{align*}
 We can also show that abstraction is a bijection between the arrows of A×B →C and those
 of $A \to B \impl C$, with inverse:
 $$
-{\abs}^{-1}\, f = \App \circ \la f \times \Id \ra
+{\abs}^{-1}\, f = \App \comp \la f \times \Id \ra
 $$
 Thus we could have presented {\bf Exp} in terms of $\abs$ and ${\abs}^{-1}$, and defined $\App$
 as ${\abs}^{-1}\Id$. This corresponds to the fact that we could have rather axiomatized 
@@ -651,7 +653,7 @@ exponentiation by an adjunction to the product, whose co-unit is $\App$ (the uni
 Finally, we define the arrow part of the functor $\impl$ (which is contravariant in its first argument)
 as:
 $$
-f \impl g = \abs(g\circ \App \circ (\Id \times f)).
+f \impl g = \abs(g\comp \App \comp (\Id \times f)).
 $$
 
 \section{Lambda-calculus}
@@ -691,7 +693,7 @@ that $E \ent M : A$ we associate an arrow $F_E(M) : E \to A$ as follows:
 \begin{align*}
 F_E (n) &= \pi_E (n)\\
 F_E ([A]M) &= \abs F_{E \times A}(M)\\
-F_E ((M\, N)) &= \App \circ \la F_E (M) , F_E (N) \ra
+F_E ((M\, N)) &= \App \comp \la F_E (M) , F_E (N) \ra
 \end{align*}
 It can be easily proved by induction that $F_E(M)$ is a well-typed arrow expression.
 
@@ -700,7 +702,7 @@ It can be easily proved by induction that $F_E(M)$ is a well-typed arrow express
 {\bf Example}. The closed term $M = [f : \nat \impl \nat ][x : \nat](f\, (f\, x))$ of type $A = (\nat \impl
 \nat) \impl (\nat\impl \nat)$ in the empty context $E = 1$, gets translated to:
 $$
-F_E (M) = \abs \abs (\App\circ \la \snd \circ \fst, \App \circ \la \snd \circ \fst, \snd\ra \ra) : 1 \to A.
+F_E (M) = \abs \abs (\App\comp \la \snd \comp \fst, \App \comp \la \snd \comp \fst, \snd\ra \ra) : 1 \to A.
 $$
 
 \subsection{The syntactic theory of terms}
@@ -709,6 +711,50 @@ The advantage of the name-free terms is that we have no name conflict. The disad
 we have to explicate relocation operations for terms containing free variables. For instance, let
 us define for every term $M$ the term $M^{+n}$ obtained in incrementing its free variables by $n$. Let
 $M^{+n} = R^0_{n}(M)$, with:
+\[
+\begin{array}{rcll}
+R^i_n(k) & = & k & \text{ if } k \leq i\nonumber\\
+&& k + n & \text{ if } k > i\nonumber\\
+R^i_n([A]M) &=& [A]R^{i+1}_n (M)\nonumber\\
+R^i_n((M N)) &=& (R^i_n(M) R^i_n(N)).\nonumber
+\end{array}
+\]
+The reader will check that $E\ent M : A$ if and only if $E@E' \ent M^{+n} : A$, where $E'$
+is an arbitrary context of length $n$.
+
+We now define substitution to free variables. Let $E\times A \ent M : B$, and $E\ent N : A$. We shall
+define a term $M\{N\}$, and show that $E \ent M\{N\}: B$. First we define recursively:
+\[
+\begin{array}{rcll}
+\sigmaN & = & k + 1 & \text{ if } k < n \\
+ &  & N^{+n} & \text{ if } k = n \\
+ &  & k  & \text{ if } k > n \\
+\sigmaN([A]M) & = & [A]\Sigma^{n}_{n+1} (M)\\
+\sigmaN(M\, M') &=& (\sigmaN(M) \, \sigmaN(M') )
+\end{array}
+\]
+It is easy to show that substitution preserves the types,
+in the sense that $(E \times A)@E' \ent M : B$
+and $E \ent N : A$ implies $E@E' \ent \sigmaN(M) : B$ with
+$n = |E'|$.
+
+Now we define $M{N} = \Sigma^0_N(M)$
+and we get that $\tau_E (M\{N\}) = \tau_{E \times A}(M)$,
+with $A= \tau_E (N)$.
+
+We are now ready to define the computation relation $\comptr$ as follows:
+\begin{align*}
+([A]M\, N) & \comptr M\{N\}\\
+M \comptr M' & \impl [A]M \comptr [A]M'
+\end{align*}
+
+
+
+
+
+
+
+
 
 
 
