--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -754,6 +754,26 @@ the sense of the translation to CCC arrows: If $E \ent M : A$ and $M \comptr N$,
 then $F_E (M) = F_E (N)$ in
 the theory {\bf Exp}, as we shall show.
 
+The computation relation presented above is traditionally called (strong) $\beta$-reduction. It is
+confluent and Noetherian (because of the types!), and thus every term possesses a canonical form,
+obtainable by iterating computation non-deterministically. Another valid conversion rule is $\eta$-
+conversion:
+\begin{equation}
+[x: A](M\, x) = M \tag{$\eta$}
+\end{equation}
+whenever $x$ does not appear in $M$. Let us show that it corresponds to {\it UniAbs},
+using our translation above.
+
+
+
+
+
+
+
+
+
+
+
 
 
 
