--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -826,12 +826,33 @@ $$
  \text{\it DistrPair}, \text{\it IdPair}, \text{\it UniPair}, \text{\it Red}, 
  \text{\it DistrAbs}\}
 $$
+Considered as a (typed) term-rewriting system, $\R_1$ is locally confluent. This can be mechanically
+checked by the Knuth-Bendix decision procedure [9]. Note that this is possible because a system
+such as $\R_1$ may be considered an (untyped) equational theory in the ordinary sense, by mixing the
+arrow structure and the object structure as follows: every arrow sub-term $M$ of type $A \to B$ is
+represented as $: (M,A,B)$, where $:$ is a special ternary function symbol. Note that variables in the
+type subparts get instanstiated by matching and unification, in the same way as the variables in the
+arrow subparts. This supports our view of the polymorphic nature of the categorical combinators.
 
+We conjecture $\R_1$ to be Noetherian, and thus confluent.
+It would be interesting to have the termination argument
+formulated as to showing that the rewriting relation is a well-partial-ordering.
+However, note that this argument cannot work on the $\Sigma$-trees alone,
+since the corresponding untyped system is strong enough to code the 
+$\beta$-reductions of untyped $\l$-calculus. 
+We remark that Klop has shown [16] that $\l$-calculus with surjective pairing
+is not Church-Rosser; however, his proof
+cannot be easily adapted to show that the untyped version of $\R_1$ is not confluent.
+Another interesting locally confluent subtheory is:
+$$
+\R_2 = \{\text{\it Ass}, \text{\it Idl}, \text{\it Idr}, \pi_1, \pi_2,
+ \text{\it DistrPair}, \text{\it IdPair}, \text{\it UniPair}, \text{\it Red}, 
+ \text{\it Red}_1 \}.
+$$
+The state of the art in the theory of categorical combinatory algebra and its relations with
+various $\l$-calculi can be found in Curien’s extensive monography [6].
 
-
-
-
-
+\subsection{Possible Extensions}
 
 
 
