--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -48,7 +48,7 @@ bookmarksopenlevel=10
 
 \date{}
 \def\mm{\Vdash}
-\def\to{\longrightarrow}
+\def\to{\rightarrow}
 \def\mto{\longmapsto}
 \def\imp{\rightarrow}
 \def\iff{\leftrightarrow}
