--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -325,13 +325,14 @@ keep this problem in mind in the following.
 We have thus a formalism with four levels. At the first level, we have the alphabet of categories
 $\Cat= \{\AC,...,\ZC\}$. At the second level, we have the alphabet of object operators. Every category
 is defined over an object alphabet $\Phi$ of operators given with an arity. $\Phi$ is where the (internal)
-functors live. We then form sequents by pairs of terms $ M \imp N$, with $M,N \in \TC(\Phi,V)$. $V$ is a set
+functors live. We then form {\it sequents} by pairs of terms 
+$ M \imp N$, with $M,N \in \TC(\Phi,V)$. $V$ is a set
 of variables denoting arbitrary objects of the category. At the third level we have the alphabet $\Sigma$
 of arrow operators. An operator from $\Sigma$ is given as an inference rule of the form:
 \[
 S_1,\dots,S_n \ent S
 \]
-where the $S_i$’s and $S$ are sequents. Such an operator is polymorphic over the free variables of the
+where the $S_i$’s and $S$ are sequents. Such an operator is {\it polymorphic} over the free variables of the
 $S_i$’s and $S$, which are supposed to be universally quantified over the inference rule. Such operators
 are familiar from logic, either as schematic inference rules, or as (definite) Horn clauses. Of course
 the arrows with domain $M$ and codomain $N$ are represented as terms over $\TC(\Sigma,F)$ of type $M \imp N$.
@@ -358,7 +359,7 @@ The further simplification comes from the realization that we are not really obl
 
 \subsubsection*{Meta-theorem}
 
-Let $\Sigma$ be an arbitrary arrow signature, and $E$ be an arbitrary term formed by operators from $\Sigma$ and untyped variables. If there is an assignment of types to the variables of $E$ that makes $E$ well-typed with respect to $\Sigma$, there is a most general such assignment, independent in each variable, and furthermore the resulting type of $E$ is most general. Here ``more general'' means ``has as substitution instance''. We call this assignment, together with the resulting type of $E$, the principal typing of $E$. More generally, for every type sequent $S$, if there is an assignment of types which makes $E$ of a type some instance of $S$, there is a principal such assignment.
+Let $\Sigma$ be an arbitrary arrow signature, and $E$ be an arbitrary term formed by operators from $\Sigma$ and untyped variables. If there is an assignment of types to the variables of $E$ that makes $E$ well-typed with respect to $\Sigma$, there is a most general such assignment, independent in each variable, and furthermore the resulting type of $E$ is most general. Here ``more general'' means ``has as substitution instance''. We call this assignment, together with the resulting type of $E$, the {\it principal} typing of $E$. More generally, for every type sequent $S$, if there is an assignment of types which makes $E$ of a type some instance of $S$, there is a principal such assignment.
 
 The meta-theorem above is most useful. It permits to omit most of the types. When we write
 an equation $E= E'$, we shall implicitly refer to the principal typing giving $E$ and $E'$ 
@@ -518,7 +519,7 @@ $\sland$-elim-left, $\sland$-elim-right, and $\sland$-intro respectively [7,15,2
 
 The rules of $\R$ have a computational meaning: they specify how to reduce a proof to its normal form.
 Here we may apply known results from the theory of term rewriting systems,
-in order to complete $\R$ to a canonical system [17,9].
+in order to complete $\R$ to a {\it canonical} system [17,9].
 
 The Knuth-Bendix completion procedure, when applied to theory {\bf Prod}, generates two additional rewrite rules:
 
@@ -664,7 +665,8 @@ between combinatory logic and CCC’s, which we shall exhibit on $\l$-calculus.
 \subsection{The $\l$-terms}
 
 We assume that the current theory is an extension of {\bf Exp}.
-We define recursively a relation $E \ent M : A$, read ``$M$ is a term of type $A$ in the context $E$'',
+We define recursively a relation $E \ent M : A$, read ``$M$ is a {\it term} of type $A$
+in the {\it context} $E$'',
 where $A \in \C$ and $E \in \C^*$, as follows:
 \begin{align*}
 \text{\bf Variable} &: \text{If } 1 \leq n \leq |E| \text{ then } E\ent n: E_n\\
@@ -679,7 +681,7 @@ We thus obtain $\l$-terms typed with objects of the CCC currently axiomatized. V
 coded as de Bruijn's indexes [2]. i.e. as integers denoting their reference depth (distance in the
 tree to their binder). This representation avoids all the renaming problems associated with actual
 names ($\alpha$ conversion), but we shall use such names whenever we give examples of terms. For
-instance, the term $[A] (1 [B] (1 2))$ shall be presented under a concrete representation such as
+instance, the term $[A] (1\, [B](1 2))$ shall be presented under a concrete representation such as
 $[x : A] (x [y : B] (y x))$. In Church's original notation, the left bracket was a $\l$ and the right
 bracket a dot, and typing was indicated by superscripting, like: $\l x^A\cdot (x \l y^B \cdot (y x))$.
 
@@ -722,7 +724,7 @@ R^i_n((M N)) &=& (R^i_n(M) R^i_n(N)).\nonumber
 The reader will check that $E\ent M : A$ if and only if $E@E' \ent M^{+n} : A$, where $E'$
 is an arbitrary context of length $n$.
 
-We now define substitution to free variables. Let $E\times A \ent M : B$, and $E\ent N : A$. We shall
+We now define {\it substitution} to free variables. Let $E\times A \ent M : B$, and $E\ent N : A$. We shall
 define a term $M\{N\}$, and show that $E \ent M\{N\}: B$. First we define recursively:
 \[
 \begin{array}{rcll}
@@ -742,7 +744,7 @@ Now we define $M{N} = \Sigma^0_N(M)$
 and we get that $\tau_E (M\{N\}) = \tau_{E \times A}(M)$,
 with $A= \tau_E (N)$.
 
-We are now ready to define the computation relation $\comptr$ as follows:
+We are now ready to define the {\it computation} relation $\comptr$ as follows:
 \begin{align*}
 ([A]M\, N) & \comptr M\{N\} \tag{$\beta$}\\
 M \comptr M' & \impl [A]M \comptr [A]M' \tag{$\xi$}\\
@@ -764,7 +766,7 @@ conversion:
 whenever $x$ does not appear in $M$. Let us show that it corresponds to {\it UniAbs},
 using our translation above.
 
-First we define the relocation combinators $\rho(i)$ as follows.
+First we define the {\it relocation} combinators $\rho(i)$ as follows.
 \begin{align*}
 \rho(0) &= \fst \\
 \rho(i+ 1) &= \rho(i) \times \Id
@@ -784,7 +786,7 @@ Note however that {\it UniAbs}
 is an algebraic law, whereas $\eta$ makes sense only relatively to concrete representations.
 
 We are now going to show that {\it Red} validates the $\beta$-reduction rule. First we define the 
-substitution combinators as follows.
+{\it substitution} combinators as follows.
 \begin{align*}
 \sigma_N (0) &= \la \Id, N \ra\\
 \sigma_N (n+ 1) &= \sigma_N (n) \times \Id
