--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -1,4 +1,4 @@
-%!TEX root = huet-1986-pal.tex
+%!TEX root = huet-1986-cm.tex
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
@@ -7,7 +7,7 @@
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
-\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -373,10 +373,10 @@ We are now ready to start Category Theory. The initial theory $\CC$ has $\Phi = 
 and $\Sigma = \{\Id,\compseq{\_}{\_} \}$, given with respective signatures:
 \begin{align*}
 \Id &: A \imp A\\
-\compseq{\_}{\_}&: A \imp B, B \imp C \ent A \imp C
+\compseq{\_}{\_}&: A \imp B, B \imp C \, \ent A \imp C
 \end{align*}
 The notation ``$\compseq{\_}{\_}$'' means that we use the infix notation $\compseq{f}{g}$
-for the composition of arrows $f$ and $g$. We can read ``$\!f$ then $g$'',
+for the composition of arrows $f$ and $g$. We can read ``$\!f$ {\it then} $g$'',
 and follow arrow composition along diagrams with semi-colon as
 concatenation of the labels. But since more people are accustomed to the standard set-theoretic
 composition notation, we shall below use $g\comp f$ as an abbreviation for $\compseq{f}{g}$.
@@ -425,7 +425,7 @@ a new $n$-ary operator $X$ and substitute throughout $x$ by $X\left(y_1, \ldots
 y_n\right)$. The Skolemization of the object variables determines $\Phi$. The
 Skolemization of the second line, together with the types implicit from the diagram
 determine $\Sigma$. Finally, following arrows around the inner diagrams determines
-$\R$. This concerns the existential part. For the unicity part, proceed as
+$\R$. This concerns the {\it existential} part. For the {\it unicity} part, proceed as
 follows. Let $f$ be the arrow whose unicity is asserted. The existence part provided by
 Skolemization an $F\left(g_1, \ldots, g_k\right)$ in place of $f$. Write a supplementary
 arrow $h$ on the diagram parallel to $f$, and use the commutation conditions to eliminate
