--- a/Huet-1986/huet-main.tex
+++ b/Huet-1986/huet-main.tex
@@ -515,11 +515,11 @@ of $\times$ above, and to verify that indeed it obeys the functorality laws.
 
 From the logical point of view, specifying a product amounts to defining conjunction. 
 Read $A \times B$ as $A \sland B$, and recognize $\fst$, $\snd$ and $\pair{-}{-}$ as respectively 
-$\sland$-elim-left, $\sland$-elim-right, and $\sland$-intro respectively [7,15,24].
+$\sland$-elim-left, $\sland$-elim-right, and $\sland$-intro respectively \cite{7,15,24}.
 
 The rules of $\R$ have a computational meaning: they specify how to reduce a proof to its normal form.
 Here we may apply known results from the theory of term rewriting systems,
-in order to complete $\R$ to a {\it canonical} system [17,9].
+in order to complete $\R$ to a {\it canonical} system \cite{17,9}.
 
 The Knuth-Bendix completion procedure, when applied to theory {\bf Prod}, generates two additional rewrite rules:
 
@@ -678,7 +678,7 @@ Thus a term may be a natural number, or may be of the form $[A]M$ with $A$ an ob
 a term, or may be of the form $(M N)$ with $M, N$ two terms.
 
 We thus obtain $\l$-terms typed with objects of the CCC currently axiomatized. Variables are
-coded as de Bruijn's indexes [2]. i.e. as integers denoting their reference depth (distance in the
+coded as de Bruijn's indexes \cite{2}. i.e. as integers denoting their reference depth (distance in the
 tree to their binder). This representation avoids all the renaming problems associated with actual
 names ($\alpha$ conversion), but we shall use such names whenever we give examples of terms. For
 instance, the term $[A] (1\, [B](1 2))$ shall be presented under a concrete representation such as
@@ -817,11 +817,11 @@ reduction rules, and to allow ``varstruct'' binding
 in order to have variables correspond to arbitrary sequences of $\fst$ and $\snd$, as opposed to just
 integers coded up in unary notation. For instance, ML (without recursion) can be translated into
 CCC arrows by a simple extension of the translation $F$ above. Actually, such a translation is the
-basis for an eﬃcient implementation of the language [3].
+basis for an eﬃcient implementation of the language \cite{3}.
 
 \subsection{The CCC Word Problem}
 
-The {\bf Exp} theory above is decidable [27]. Unfortunately, no canonical system is known for the full
+The {\bf Exp} theory above is decidable \cite{27}. Unfortunately, no canonical system is known for the full
 theory. An interesting sub-theory is obtained by restricting $\R$ to the set
 $$
 \R_1 = \{\text{\it Ass}, \text{\it Idl}, \text{\it Idr}, \pi_1, \pi_2,
@@ -861,7 +861,7 @@ The {\bf Exp} theory is enriched with injections and a conditional operator. The
 are the bi-cartesian closed categories.
 
 Finally, we may postulate the existence of a universal object $U$ and build the full untyped
-$\l$-calculus in the manner of Scott, as described in [25].
+$\l$-calculus in the manner of Scott, as described in \cite{25}.
 
 That is, we postulate a retract pair between $U$ and $U \imp U$:
 \begin{align*}
@@ -890,18 +890,18 @@ an isomorphism between $U$ and $U\impl U$.
 {\bf Caution}. Some combinations of the above extensions may be incompatible, in that they may lead
 to an inconsistency, in the sense that the only model of the extended theory is the trivial category
 1. For instance, Lawvere showed that the theory of bi-cartesian closed categories with fixpoints is
-inconsistent [20, 13].
+inconsistent \cite{13, 20}.
 
 \section*{Acknowledgements}
 
 The general formalization was developped in 1983, after listening in Sophia-Antipolis to a talk by
 P.L. Curien on categorical combinators. The translation from 4.2 was derived after the author
-noticed the close connection between the categorical operators of Lambek [18] and de Bruijn’s
-nameless notation for $\l$-calculus [2]. Instrumental to this was a close study of the ML compiler
-developed by Lockwood Morris for the LCF project [8]. The syntactic theory from 4.3 is similar to
-the formalization of Automath by Jutting [14], except that the absence of dependent types makes
+noticed the close connection between the categorical operators of Lambek \cite{18} and de Bruijn’s
+nameless notation for $\l$-calculus \cite{2}. Instrumental to this was a close study of the ML compiler
+developed by Lockwood Morris for the LCF project \cite{8}. The syntactic theory from 4.3 is similar to
+the formalization of Automath by Jutting \cite{14}, except that the absence of dependent types makes
 things a little simpler. This treatment of $\l$-calculus computation was the basis of the author’s
-implementation in ML of the Calculus of Constructions [4]. The author acknowledges numerous
+implementation in ML of the Calculus of Constructions \cite{4}. The author acknowledges numerous
 discussions on categorical combinators with P.L. Curien, A. Poign\'e and D. Scott.
 
 
